objects/Laser_Contracts__c.object
<CustomObject>
    <description>Used by Laser group to log contracts for clients</description>
    <fields>
        <fullName>Artwork_Change_Fee_Per_Form__c</fullName>
        <description>Artwork Change Fee Per Form</description>
        <label>Artwork Change Fee Per Form</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artwork_Change_Fee_Per_Site__c</fullName>
        <description>Artwork Change Fee Per Site</description>
        <label>Artwork Change Fee Per Site</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artwork_New_Add_Fee_Per_Form__c</fullName>
        <description>Artwork New/Add Fee Per Form</description>
        <label>Artwork New/Add Fee Per Form</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artwork_New_Add_Fee_Per_Site__c</fullName>
        <description>Artwork New/Add Fee Per Site</description>
        <label>Artwork New/Add Fee Per Site</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Paper_Amount__c</fullName>
        <description>Billable Paper Amount</description>
        <label>Billable Paper Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Toner_Amount__c</fullName>
        <description>Billable Toner Amount</description>
        <label>Billable Toner Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Setup_Case_Link__c</fullName>
        <formula>IF (NOT ( ISBLANK( Billing_Setup_Case__c )), hyperlink(&quot;http://dstdevwebint1he.ds.ad.adp.com/AutoToolsX/Vision/VisionPrintPage.aspx?IdNumber=&quot; &amp; Billing_Setup_Case__c &amp; &quot;&amp;PrintActivityLogFlag=false&amp;OutputType=html&amp;LoginName=&quot; &amp; IF(ISBLANK($User.FirstName), $User.LastName, $User.FirstName &amp; &quot; &quot; &amp; $User.LastName ), &quot;Open Billing Case&quot;), &quot; &quot;)</formula>
        <label>Billing Setup Case Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Setup_Case__c</fullName>
        <label>Billing Setup Case #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Fee_Per_Form__c</fullName>
        <label>Change Fee Per Form</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Fee_Per_Site__c</fullName>
        <label>Change Fee Per Site</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rate_Billable_Paper_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Rate (Billable Paper Amount)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Rate_Billable_Toner_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Rate (Billable Toner Amount)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Rate_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Rate (Paper)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Rate_Toner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Rate (Toner)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Adjust__c</fullName>
        <description>Do Not Adjust</description>
        <label>Do Not Adjust</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Directed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draft_Received_Date__c</fullName>
        <label>Draft Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Statement_Per_Logon__c</fullName>
        <description>Financial Statement Per Logon</description>
        <label>Financial Statement Per Logon</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Statement_Per_Manuf__c</fullName>
        <description>Financial Statement Per Manuf</description>
        <label>Financial Statement Per Manuf</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Statement_Per_Site__c</fullName>
        <description>Financial Statement Per Site</description>
        <label>Financial Statement Per Site</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY’08 (0.0532/0.0665)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY’09 (0.0562/0.0701)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY’10 (0.0594/0.0740)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY’11 (0.0628/0.0782)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY’12 (0.0653/0.0813)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY’13 (0.0653/0.0813)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY’14 (0.0653/0.0813)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY’15 (0.0689/0.0813)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flat_Printer_Rate__c</fullName>
        <label>Flat Printer Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Sheet_Rate__c</fullName>
        <label>Flat Sheet Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Site_Rate__c</fullName>
        <label>Flat Site Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Suppression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Freight Suppression</description>
        <label>Freight Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency_in_Months__c</fullName>
        <description>Frequency in Months</description>
        <label>Frequency in Months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laser_Billing_Info__c</fullName>
        <label>Laser Billing Info</label>
        <referenceTo>Laser_Billing_Info__c</referenceTo>
        <relationshipLabel>Laser Contracts</relationshipLabel>
        <relationshipName>R00N40000001lfnEEAQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Laser_Contract__c</fullName>
        <formula>TRIM(Name)</formula>
        <label>Laser Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Add_Fee_Per_Form__c</fullName>
        <label>New/Add Fee Per Form</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Add_Fee_Per_Site__c</fullName>
        <label>New/Add Fee Per Site</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notified_LAS_Team__c</fullName>
        <label>Notified LAS Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overage_Rate_Amount__c</fullName>
        <description>Overage Rate Amount</description>
        <label>Overage Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paper_Allotment_Amount__c</fullName>
        <description>Paper Allotment Amount</description>
        <label>Paper Allotment Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Allotment_Level__c</fullName>
        <description>Paper Allotment Level</description>
        <label>Paper Allotment Level</label>
        <picklist>
            <picklistValues>
                <fullName>Per Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paper_Allotment_Type__c</fullName>
        <description>Paper Allotment Type</description>
        <label>Paper Allotment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paper_Amount__c</fullName>
        <label>Paper Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Logon__c</fullName>
        <label>Per Logon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Manufacturer__c</fullName>
        <label>Per Manufacturer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Site__c</fullName>
        <label>Per Site</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_To_CMF_Name__c</fullName>
        <formula>Laser_Billing_Info__r.Ship_To_CMF_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-To CMF Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_CMF__c</fullName>
        <description>Ship-To CMF</description>
        <formula>Laser_Billing_Info__r.Ship_To_CMF_Name__r.Ship_CMF__c</formula>
        <label>Ship-To CMF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>Special Instructions</description>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms_Months__c</fullName>
        <label>Terms - Months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toner_Amount__c</fullName>
        <label>Toner Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Laser Contracts</label>
    <nameField>
        <displayFormat>LCO-{00000}</displayFormat>
        <label>Laser Contract</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laser Contracts</pluralLabel>
    <recordTypes>
        <fullName>FY_Flat_Sheet_Rate</fullName>
        <active>true</active>
        <description>Use for clients with a FY flat sheet rate catalog number contracted and there is not a NSA for another rate and/or billing model.</description>
        <label>FY Flat Sheet Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>IDMS</fullName>
        <active>true</active>
        <description>Use for IDMS clients.</description>
        <label>IDMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Laser_Two</fullName>
        <active>true</active>
        <description>Use for Laser Two clients that have no exceptions or a NSA drafted.</description>
        <label>Laser Two</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSAArtwork</fullName>
        <active>true</active>
        <description>Use for clients that have an artwork only related NSA.</description>
        <label>NSA - Artwork</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSABillablePaperToner</fullName>
        <active>true</active>
        <description>Use for clients that have a billable paper and/or toner NSA and are not under IDMS, Flat Printer, Flat Site, Framework, or Promo.</description>
        <label>NSA - Billable Paper &amp; Toner</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSAFinancialStatement</fullName>
        <active>true</active>
        <description>Use for clients that have a financial statement only related NSA.</description>
        <label>NSA - Financial Statement</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSAFlatPrinterRate</fullName>
        <active>true</active>
        <description>Use for clients with a Flat Printer Rate NSA and there is not a Framework NSA in existence.</description>
        <label>NSA - Flat Printer Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSAFlatSheetRate</fullName>
        <active>true</active>
        <description>Use for clients with a Flat Sheet Rate NSA and there is not a Framework NSA in existence.</description>
        <label>NSA - Flat Sheet Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSAFlatSiteRate</fullName>
        <active>true</active>
        <description>Use for clients with a Flat Site Rate NSA and there is not a Framework NSA in existence.</description>
        <label>NSA - Flat Site Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSAFramework</fullName>
        <active>true</active>
        <description>Use for clients with a Framework NSA.</description>
        <label>NSA - Framework</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSALaserOneOverage</fullName>
        <active>true</active>
        <description>Use for all Laser One clients.</description>
        <label>NSA - Laser One Overage</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSALaserTwo</fullName>
        <active>true</active>
        <description>Use for Laser Two clients that have either a NSA, not adjustable, or paper restrictions.</description>
        <label>NSA - Laser Two</label>
    </recordTypes>
    <recordTypes>
        <fullName>Promo</fullName>
        <active>true</active>
        <description>Use for clients that are on a Promo billing model with no exceptions and are not under IDMS, Flat Printer, Flat Site, or Framework.</description>
        <label>Promo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_2</fullName>
        <active>true</active>
        <description>Use for clients who have contracts that specifically indicate Purchase 2 which doesn’t need an NSA for billable paper and toner. Includes 5 free toners per laser per year and all paper and checks are purchased from either ADP or another source.</description>
        <label>Purchase 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchased_Laser_with_FSR</fullName>
        <active>true</active>
        <description>Use for clients who have purchased lasers but no NSA for billable paper and toner.</description>
        <label>Purchased Laser with FSR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchased_Lasers_with_BPT_NSA</fullName>
        <active>true</active>
        <description>Use for clients who have purchased lasers and an NSA for billable paper and toner no clicks.</description>
        <label>Purchased Lasers with BPT NSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Traditional</fullName>
        <active>true</active>
        <description>Use for client that are on the Traditional billing model.</description>
        <label>Traditional</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>